--- a/css/kontakt.css
+++ b/css/kontakt.css
@@ -63,7 +63,7 @@
 
 @media (max-width: 1100px) {
     #map1, #map2 {
-        width: 350px;
+        width: 100%;
         margin: 2rem auto;
     }
 
