--- a/css/style.css
+++ b/css/style.css
@@ -148,6 +148,7 @@ p {
         width: 200px;
         top: 0;
         right: -200px;
+        display: none;
         text-align: left;
         z-index: 2;
         transition: 1s;
